Bug 66794 - [bug] resizing window small looks odd
Summary: [bug] resizing window small looks odd
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-10 20:32 UTC by Brian Lovin
Modified: 2013-10-30 22:08 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Observe weird behavior on resize. (726.13 KB, text/plain)
2013-07-10 20:32 UTC, Brian Lovin
Details

Description Brian Lovin 2013-07-10 20:32:39 UTC
Created attachment 82296 [details]
Observe weird behavior on resize.

System Environment:
--------------------------
Distro: Fedora 17
Arch: x86_64
wayland (HEAD) 1.1.91-0-g3f3671e
fontconfig (master) heads/master-0-gcbf06d7
drm (HEAD) libdrm-2.4.45-0-g63aeae1
mesa (9.1) heads/9.1-0-g26f802d
libxkbcommon (HEAD) xkbcommon-0.3.0-0-g27a1176
pixman (HEAD) pixman-0.30.0-0-g41daf50
cairo (HEAD) 1.12.14-0-g0dac37c
weston (HEAD) 1.1.91-0-g46cb4a9

Detailed Description:
-----------------------------
When windows are resized very small the drop shadows begin to collide with one another and make a really odd looking dark area. Easy to reproduce with the cliptest client.

Steps to Reproduce:
----------------------------
1. start weston under X11 or DRM mode
2. ./cliptest
3. Resize window very small on the vertical axis
4. Observe drop shadow additive behaviour.
Comment 1 Kristian Høgsberg 2013-10-21 22:24:59 UTC
Let's just set a catch-all minimum size for windows that doesn't set a minimum size:

commit 53ec5604231b3eefe009111682b0c12ea5254d4a
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon Oct 21 15:05:49 2013 -0700

    window: Set a minimum size for toytoolkit windows
    
    The decorations tiles start to overlap and look weird if we go below
    200x200 size windows.  Just set that as a minimum size if the app
    doesn't provide a bigger minimum size.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=66794

Picked to the 1.3 branch too.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.